--- a/css/style.css
+++ b/css/style.css
@@ -1359,7 +1359,7 @@ input[type="text"] {
   background: transparent;
   border: 2px solid rgba(0, 0, 0, 0.1);
   height: 54px;
-  font-size: 18px;
+  /* font-size: 30px; */
   font-weight: 300;
 }
 .form-control:active, .form-control:focus {
